sftp: Allow seek past end of file

also, don't query for the file size unless required for SEEK_END

https://bugzilla.gnome.org/show_bug.cgi?id=709432